1.20 upgrade